--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,6 @@
         ],
         ["@babel/preset-react"]
     ],
-    "plugins": ["@babel/plugin-syntax-dynamic-import", "@babel/plugin-proposal-object-rest-spread"]
-    // "plugins": ["@babel/plugin-syntax-dynamic-import", "@babel/plugin-proposal-object-rest-spread","@babel/plugin-proposal-class-properties"]
+    // "plugins": ["@babel/plugin-syntax-dynamic-import", "@babel/plugin-proposal-object-rest-spread"]
+    "plugins": ["@babel/plugin-syntax-dynamic-import", "@babel/plugin-proposal-object-rest-spread","@babel/plugin-proposal-class-properties"]
 }
