--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
-    "single-spa": "^4.4.3",
-    "single-spa-react": "^2.11.0"
+    "single-spa": "^4.4.4",
+    "single-spa-react": "^2.11.0",
+    "single-spa-vue": "^2.0.0",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -34,6 +37,8 @@
     "html-loader": "^0.5.5",
     "style-loader": "^1.1.3",
     "svg-inline-loader": "^0.8.0",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
